# lunaris

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.master  Dockerfile.rust-worker  Dockerfile.worker  README.md  design.md  docker-compose.yml  mcu-worker.md  mkdocs.yml  pyproject.toml  run.sh  task.proto
deploy/: .env.example
deploy/prometheus/: prometheus.yml
docs/: index.md
docs/architecture/: master.md  overview.md  protocol.md  python-worker.md  rust-worker.md  wasip1-host-capabilities.md
docs/cli/: master.md  overview.md  worker.md
docs/deployment/: guide.md  production.md
docs/development/: contributing.md  guide.md
docs/getting-started/: installation.md  quickstart.md
docs/sdk/: async-client.md  examples.md  overview.md  sync-client.md  wasm-guest.md
lunaris/: __init__.py  __main__.py  utils.py
lunaris/cli/: main.py
lunaris/client/: AGENTS.md  __init__.py  client.py  sync.py  utils.py
lunaris/core/: model.py
lunaris/master/: AGENTS.md  __init__.py  __main__.py  api.py  file_store.py  manager.py  metrics.py  model.py  store.py  store_base.py  web_app.py
lunaris/proto/: client_pb2.py  client_pb2.pyi  common_pb2.py  common_pb2.pyi  task_pb2.py  task_pb2.pyi  worker_pb2.py  worker_pb2.pyi
lunaris/proto/proto/: worker_pb2.py  worker_pb2.pyi
lunaris/runtime/: AGENTS.md  __init__.py  capabilities.py  engine.py  libs.py  limits.py
lunaris/worker/: AGENTS.md  __init__.py  __main__.py  core.py  main.py
mcu-worker/: .gitignore  AGENTS.md  CMakeLists.txt  README.md
mcu-worker/esp32/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
mcu-worker/esp32/main/: CMakeLists.txt  Kconfig.projbuild
mcu-worker/proto/: nanopb.options
mcu-worker/scripts/: fetch_deps.sh  generate_proto.sh
mcu-worker/scripts/patches/: nanopb-protobuf-6.33.6.patch  wasm3-esp32-build.patch
mcu-worker/src/: app_esp32.c  config.h  engine.c  engine.h  main.c  platform.h  platform_default.c  platform_esp32.c  proto.c  proto.h  websocket.c  websocket.h  wifi.h  wifi_esp32.c  worker.c  worker.h
proto/: build.sh  client.proto  common.proto  worker.proto
rust-worker/: AGENTS.md  Cargo.toml  build.rs
rust-worker/src/: capabilities.rs  cli.rs  core.rs  engine.rs  main.rs  proto.rs
rust-worker/src/capabilities/: mod.rs  registry.rs  simd.rs
sdk/: AGENTS.md
sdk/assemblyscript/: README.md  lunaris.ts
sdk/c/: CMakeLists.txt  README.md  lunaris.h
sdk/c/examples/: context.c
sdk/cpp/: CMakeLists.txt  README.md  lunaris.hpp
sdk/cpp/examples/: context.cpp
sdk/go/: README.md  go.mod  lunaris.go
sdk/go/example/: main.go
sdk/grain/: README.md  lunaris.gr
sdk/rust/lunaris-wasm/: Cargo.toml  README.md
sdk/rust/lunaris-wasm/src/: lib.rs
sdk/zig/: README.md  build.zig  lunaris.zig
sdk/zig/examples/: context.zig
