[project]
name = "lunaris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "loguru>=0.7.3",
    "orjson>=3.11.3",
    "protobuf>=6.32.1",
    "psutil>=7.0.0",
    "uvicorn>=0.35.0",
    "uvloop>=0.21.0",
    "wasmtime>=36.0.0",
    "websockets>=15.0.1",
]
