[package]
name = "lunaris-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
prost = "0.14.1"
tokio = { version = "1.47.1", features = ["full"] }
wasmtime = "37.0.2"
wasmtime-wasi = "37.0.2"
zstd = "0.13.3"

[build-dependencies]
prost-build = "0.14.1"
