[package]
name = "lunaris-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
futures-util = "0.3.31"
hex = "0.4.3"
num_cpus = "1.17.0"
prost = "0.14.1"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
sysinfo = "0.37.2"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
wasmtime = "37.0.2"
wasmtime-wasi = "37.0.2"
zstd = "0.13.3"
zstd-safe = "7.2.4"

[build-dependencies]
prost-build = "0.14.1"
